[update] sesions
