# lib/controllers/totp.js
@@ -29,7 +29,7 @@ self.checkLogin = async (req, res) => {
     if (!token || !tempToken)
       return res.status(400).send({ message: "Faltan parámetros" });
 
-    const response = await Totp.checkLogin(token, tempToken, res);
+    const response = await Totp.checkLogin(token, tempToken, res, req.headers["user-agent"]);
     res.status(200).send(response);
   } catch (error) {
     await utils.responseError(res, error);
